--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                <input type="radio" name="Question 3" value="Maybe">Maybe
         </label>
         <br>
-
+        <em>Thank you for your imput.</em>
         <input type="submit">
     </form>
     
