--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+<body>
+
+    <header>
+        <h1>Sample HTML<h1>
+        <nav>
+            <a href="form.html">form</a>
+        </nav>
+    </header>
+
+    <section>
+        <h2>Sample Tags</h2>
+    <p>Hello World!</p>
+    <p>Global Warming is real or is it?</p>
+    <img src="img/grumpy.jpg" alt="Grumpy Cat">
+
+</body>
+</html>
