--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h2>Sample Tags</h2>
     <p>Hello World!</p>
     <p>Global Warming is real or is it?</p>
-    <p>A link to my <a href="https://www.mozilla.org/" title="The Mozilla homepage" target="_blank">favorite website</a>.</p> 
+    <p>Global Warming is a hoax, click here<a href="https://en.wikipedia.org/wiki/Global_warming_conspiracy_theory" title="Conspiracy theory" target="_blank">click here</a>.</p> 
         
 </html>
 
