--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
 
     <section>
         <h2>Sample Tags</h2>
-    <p>Hello World!</p>
+    <p>Hello Hot World!</p>
+        <img src="    ">
     <p>Global Warming is real or is it?</p>
-    <p>Global Warming is a hoax, click here<a href="https://en.wikipedia.org/wiki/Global_warming_conspiracy_theory" title="Conspiracy theory" target="_blank">click here</a>.</p> 
-        
+    <p>Global Warming is a hoax, <a href="https://en.wikipedia.org/wiki/Global_warming_conspiracy_theory" title="Conspiracy theory" target="_blank">click here</a>.</p> 
+    <br>
+    <p>Global Warming is real, <a href="https://en.wikipedia.org/wiki/Global_warming" title="It's real" target="_blank">click here</a>.</p>    
 </html>
 
    
