--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <section>
         <h2>Sample Tags</h2>
     <p>Hello Hot World!</p>
-        <img src="    ">
+        <img src="123.jpeg">
     <p>Global Warming is real or is it?</p>
     <p>Global Warming is a hoax, <a href="https://en.wikipedia.org/wiki/Global_warming_conspiracy_theory" title="Conspiracy theory" target="_blank">click here</a>.</p> 
     <br>
