--- a/index.html
+++ b/index.html
@@ -10,20 +10,22 @@
 <body>
 
     <header>
-        <h1>Sample HTML<h1>
-        <nav>
-            <a href="form.html">form</a>
-        </nav>
+        <h1>Something to think about<h1>
     </header>
 
     <section>
-        <h2>Sample Tags</h2>
+        <h2>Check <strong>hot gossip</strong> below</h2>
     <p>Hello Hot World!</p>
         <img src="123.jpeg">
     <p>Global Warming is real or is it?</p>
-    <p>Global Warming is a hoax, <a href="https://en.wikipedia.org/wiki/Global_warming_conspiracy_theory" title="Conspiracy theory" target="_blank">click here</a>.</p> 
-    <br>
-    <p>Global Warming is real, <a href="https://en.wikipedia.org/wiki/Global_warming" title="It's real" target="_blank">click here</a>.</p>    
+    <p>Global Warming is a hoax, <a href="https://en.wikipedia.org/wiki/Global_warming_conspiracy_theory" title="Conspiracy theory" target="_blank">click here</a>.</p>
+    <p>Global Warming is real, <a href="https://en.wikipedia.org/wiki/Global_warming" title="It's real" target="_blank">click here</a>.</p>
+        <p>Please fillout a quick survey with a link below</p>     
+        <nav>
+            <a href="form.html">form</a>
+        </nav>
+        <p>Thank You</p>    
+        
 </html>
 
    
