--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <p>Global Warming is real, <a href="https://en.wikipedia.org/wiki/Global_warming" title="It's real" target="_blank">click here </a><em>for another hot article</em>.</p>
         <p>Please fillout a quick survey with a link below</p>     
         <nav>
-            <a href="form.html">form</a>
+            <a href="form.html">Form</a>
         </nav>
         <p>Thank You</p>    
         
