--- a/form.html
+++ b/form.html
@@ -1,6 +1,6 @@
 
 
-!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-    <h1>Survey</h1>
+    <h1>Quick Survey</h1>
     <nav>
         <a href="index.html">Home</a>
     </nav>
@@ -26,9 +26,9 @@
         <input type="email" placeholder="Email"
                id="email">
         <br>
+        <br>
         <label>Question 1</label>
         <p>Do you agree that global warming is real.</p>
-        <br>
         <label>
                <input type="radio" name="Question 1" value="agree">agree
         </label>
@@ -39,9 +39,9 @@
                <input type="radio" name="Question 1" value="undecided">undecided
         </label>
         <br>
+        <br>
         <label>Question 2</label>
         <p>Do you agree that global warming is a hoax.</p>
-         <br>
         <label>
                <input type="radio" name="Question 2" value="agree">agree
         </label>
@@ -51,10 +51,9 @@
         <label>
                <input type="radio" name="Question 2" value="undecided">undecided
         </label>
-        <br>
+       <br>
         <label>Question 3</label>
            <p>Is it globalists pushing the idea of global warming for their own wealth.</p>
-        <br>
         <label>
                <input type="radio" name="Question 3" value="Yes">Yes
         </label>
@@ -64,6 +63,7 @@
         <label>
                <input type="radio" name="Question 3" value="Maybe">Maybe
         </label>
+        <br>
         <br>
         <em>Thank you for your imput.</em>
         <input type="submit">
