--- a/form.html
+++ b/form.html
@@ -28,45 +28,29 @@
         <br>
         <br>
         <label>Question 1</label>
-        <p>Do you agree that global warming is real.</p>
-        <label>
-               <input type="radio" name="Question 1" value="agree">agree
-        </label>
-        <label>
-               <input type="radio" name="Question 1" value="disagree">disagree
-         </label>
-        <label>
-               <input type="radio" name="Question 1" value="undecided">undecided
-        </label>
+        <p>Do you agree or disagree that global warming is real.</p>
+        <label><input type="radio" name="Question 1" value="agree">agree</label>
+        <label><input type="radio" name="Question 1" value="disagree">disagree</label>
+        <label><input type="radio" name="Question 1" value="undecided">undecided</label>
         <br>
         <br>
         <label>Question 2</label>
         <p>Do you agree that global warming is a hoax.</p>
-        <label>
-               <input type="radio" name="Question 2" value="agree">agree
-        </label>
-        <label>
-               <input type="radio" name="Question 2" value="disagree">disagree
-         </label>
-        <label>
-               <input type="radio" name="Question 2" value="undecided">undecided
-        </label>
-       <br>
-        <label>Question 3</label>
-           <p>Is it globalists pushing the idea of global warming for their own wealth.</p>
-        <label>
-               <input type="radio" name="Question 3" value="Yes">Yes
-        </label>
-        <label>
-               <input type="radio" name="Question 3" value="No">No
-         </label>
-        <label>
-               <input type="radio" name="Question 3" value="Maybe">Maybe
-        </label>
+        <label><input type="radio" name="Question 2" value="agree">agree</label>
+        <label><input type="radio" name="Question 2" value="disagree">disagree</label>
+        <label><input type="radio" name="Question 2" value="undecided">undecided</label>
         <br>
+        <br>
+        <label>Question 3</label>
+        <p>Is it globalists pushing the idea of global warming for their own wealth.</p>
+        <label><input type="radio" name="Question 3" value="Yes">Yes</label>
+        <label><input type="radio" name="Question 3" value="No">No</label>
+        <label><input type="radio" name="Question 3" value="Maybe">Maybe</label>
+        <br>
+        <br>
+        <input type="submit">
         <br>
         <em>Thank you for your imput.</em>
-        <input type="submit">
     </form>
     
     
