--- a/form.html
+++ b/form.html
@@ -28,16 +28,17 @@
         <br>
         <br>
         <label>Question 1</label>
-        <p>Do you agree or disagree that global warming is real.</p><label><input type="radio" name="Question 1" value="agree">agree</label>
-        <label><input type="radio" name="Question 1" value="disagree">disagree</label>
-        <label><input type="radio" name="Question 1" value="undecided">undecided</label>
+        <p>Do you agree or disagree that global warming is real.</p>
+        <label><input type="radio" name="Question 1" value="agree">Agree</label>
+        <label><input type="radio" name="Question 1" value="disagree">Disagree</label>
+        <label><input type="radio" name="Question 1" value="undecided">Undecided</label>
         <br>
         <br>
         <label>Question 2</label>
         <p>Do you agree or disagree that global warming is a hoax.</p>
-        <label><input type="radio" name="Question 2" value="agree">agree</label>
-        <label><input type="radio" name="Question 2" value="disagree">disagree</label>
-        <label><input type="radio" name="Question 2" value="undecided">undecided</label>
+        <label><input type="radio" name="Question 2" value="agree">Agree</label>
+        <label><input type="radio" name="Question 2" value="disagree">Disagree</label>
+        <label><input type="radio" name="Question 2" value="undecided">Undecided</label>
         <br>
         <br>
         <label>Question 3</label>
