--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
             <a href="form.html">Survey</a>
         </nav>
         <p>Thank You</p>    
+        <br>
+        <img src="321.jpg">
         
 </html>
 
