--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <header>
-        <h1>Something to think about<h1>
+        <h1>Something to think about</h1>
     </header>
 
     <section>
