--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <section>
         <h2>Check out <strong>hot gossip</strong> below</h2>
+    </section>
     <p>Hello Hot World!</p>
         <img src="123.jpeg">
     <p>Global Warming is real (or is it)?</p>
